KGGSeq Update T2
For the second update in 20160225